# to_do_reminder

./: LICENCE  README.md  docker-compose.yml
server/: .env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  data.json  database  launch.sh
server/migrations/2022-01-09-105614_user/: up.sql
server/migrations/2022-01-27-181104_todo/: down.sql  up.sql
server/migrations/2022-01-27-190523_database/: down.sql  up.sql
server/src/: main.rs  schema.rs
server/src/db/: handler.rs  mod.rs  pref_table.rs  todo_table.rs  user_table.rs
server/src/path/: account.rs  errors.rs  mod.rs  pref.rs  todo.rs  todo_list.rs
server/src/utils/: context.rs  cookie.rs  email.rs  json.rs  mod.rs  pref.rs  todo.rs  token.rs
server/static/css/: account.css  calendar.css  common.css  common_form.css  errors.css  form.css  home.css  member.css  nav_bar.css  submit.css  user_display.css  user_edit.css  user_personal.css
server/static/css/account/: account.css  member.css  user_display.css  (+2 more)
server/static/js/: commonForm.js  editForm.js  forgotPassword.js  home.js  loginForm.js  registerForm.js  script.js
server/templates/: common.html.tera  home.html.tera
server/templates/account/: edit.html.tera  forgot_password.html.tera  home.html.tera  login.html.tera  register.html.tera  user_display.html.tera  users.html.tera  users_admin.html.tera
server/templates/error/: 401.html.tera  403.html.tera  404.html.tera  405.html.tera  417.html.tera  418.html.tera  500.html.tera  wrong_status.html.tera
server/templates/pref/: home.html.tera
server/templates/todo/: create.html.tera  edit.html.tera  home.html.tera  test.html.tera
(+19 files in other folders)
