[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kallu-A"]
homepage = "https://github.com/Kallu-A/to_do_reminder"
repository = "https://github.com/Kallu-A/to_do_reminder"
readme = "README.md"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
dotenv = "0.15.0"
diesel={version="1.4.2", features=["sqlite"]}
regex = "1.5.4"