[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kallu-A"]
homepage = "https://github.com/Kallu-A/to_do_reminder"
repository = "https://github.com/Kallu-A/to_do_reminder"
readme = "README.md"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
serde = "1.0.2"
dotenv = "0.15.0"
diesel={version="1.4.2", features=["sqlite"]}
regex = "1.5.4"
rocket-multipart-form-data = "0.10.0"
time = { version = "0.2.1", default-features = false, features = ["std"] }
pbkdf2 = "0.7"
jwt = "0.16.0"
hmac = { version = "0.12", features = ["reset"] }
sha2 = "0.10"


[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]